SERVER-22156 dbhash should cache hashes at the collection level